FEAT: All components and features done. Working in CSS

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+<section class="container">
+    <h1 class="home__title">Hello, Welcome to my Portfolio</h1>
+    <p class="home__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam voluptate ipsum officiis magni,
+        sint ullam fugiat reprehenderit minima atque minus nisi quo, nihil commodi dicta dolore. Inventore deleniti quia
+        reprehenderit!
+    </p>
+    <button class="btn" (click)="goToAbout()">More About Me</button>
+    <div class="home__galery">
+        <div class="home__galery--item">
+            <img src="../../assets/img/cocina1.jpg" alt="Cocina 1">
+        </div>
+        <div class="home__galery--item">
+            <img src="../../assets/img/cocina2.jpg" alt="Cocina 2">
+        </div>
+        <div class="home__galery--item">
+            <img src="../../assets/img/cocina3.jpg" alt="Cocina 3">
+        </div>
+        <div class="home__galery--item">
+            <img src="../../assets/img/cocina4.jpg" alt="Cocina 4">
+        </div>
+    </div>
+</section>
