--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,10 @@
-<p>about works!</p>
+<section class="container">
+    <h2 class="about__title">About</h2>
+    <div class="about__content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, praesentium? Exercitationem quibusdam impedit
+            quasi, deserunt corporis suscipit, sit maxime alias fuga dicta velit, consequuntur earum? Distinctio illum
+            officia ipsum! Delectus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quisquam totam animi mollitia eum possimus quos
+            vero, illo obcaecati. Animi exercitationem, enim itaque quisquam illo cum sunt dolor minima obcaecati?</p>
+    </div>
+</section>
