--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,1 +1,16 @@
-<p>project works!</p>
+<section class="container">
+    <div class="project">
+        <div class="project__img">
+            <img src={{kitchen.photo}} alt="Imagen Cocina">
+        </div>
+        <div class="project__content">
+            <p >{{kitchen.description}}</p>
+            <p >{{kitchen.price}} €</p>
+            <button (click)="goToModify()">Modificar el Precio</button>
+        </div>
+    </div>
+    <div class="btn__container">
+        <button (click)="goToHome()">Volver al Home</button>
+        <button (click)="goBack()">Volver Atrás</button>
+    </div>
+</section>
