--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,17 @@
 header{
-    border-bottom: solid var(--color-text) 2px;
+    /* border-bottom: solid var(--color-text) 2px; */
+    box-shadow: var(--color-text) 0px 2px 5px 0px;
 }
 .header__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
+}
+@media (max-width: 500px){
+    .header__content{
+        flex-direction: column;
+    }
 }
 .logo {
   width: 10rem;
@@ -18,6 +24,16 @@ header{
 .navigation a{
     font-size: 2.4rem;
     font-weight: bold;
+    transition: all .2s ;
+}
+.navigation a:hover{
+    color: var(--color-white);
+    text-shadow: var(--color-text) 2px 2px 2px;
+}
+@media (max-width: 500px){
+    .navigation a{
+        font-size: 1.8rem;
+    }
 }
 
 .active{
