--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,11 @@ html{
 }
 
 body{
-    font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
     line-height: 1.5;
     background-color: var(--color-bg);
     color: var(--color-text);
+    font-size: 1.6rem;
 }
 a{
     text-decoration: none;
@@ -47,4 +47,23 @@ h2{
 .container{
     max-width: 1400px;
     margin: 0 auto;
+}
+
+.btn{
+    width: fit-content;
+    padding: 1rem 2rem;
+    background-color: var(--color-text);
+    color: var(--color-white);
+    border-radius: 2rem;
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .3s;
+    border: unset;
+}
+.btn:hover{
+   
+    box-shadow: var(--color-text) 2px 2px 7px 0px;
+    transform: scale(1.05);
 }
