--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="project__content">
             <p>{{kitchen.description}}</p>
-            <p class="project__price">Price {{kitchen.price}} €</p>
+            <p class="project__price">Precio {{kitchen.price}} €</p>
             <button class="btn" (click)="goToModify()">Modificar el Precio</button>
         </div>
     </div>
