--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,18 +1,23 @@
-<section class="container">
+    <section class="container">
     <h2 class="contact__title">Contact</h2>
-    <form action="" class="contact__form">
-        <div class="field">
-            <label for="name" class="field__label">Name</label>
-            <input type="text" class="field__input" id="name" name="name" placeholder="Your name">
+    <div class="contact__content">
+        <form action="" class="contact__form">
+            <div class="field">
+                <label for="name" class="field__label">Name</label>
+                <input type="text" class="field__input" id="name" name="name" placeholder="Your name">
+            </div>
+            <div class="field">
+                <label for="email" class="field__label">Email</label>
+                <input type="email" class="field__input" id="email" name="email" placeholder="Your email">
+            </div>
+            <div class="field">
+                <label for="message" class="field__label">Message</label>
+                <textarea name="message" id="message" class="field__input" placeholder="Your message"></textarea>
+            </div>
+            <button class="btn">Send Message</button>
+        </form>
+        <div class="contact__image">
+            <img src="../../assets/img/mail.jpg" alt="Mail">
         </div>
-        <div class="field">
-            <label for="email" class="field__label">Email</label>
-            <input type="email" class="field__input" id="email" name="email" placeholder="Your email">
-        </div>
-        <div class="field">
-            <label for="message" class="field__label">Message</label>
-            <textarea name="message" id="message" class="field__input" placeholder="Your message"></textarea>
-        </div>
-        <button class="btn">Send Message</button>
-    </form>
+    </div>
 </section>
