WORKING: connecting to firebase

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,8 @@
 <section class="container">
     <h2 class="portfolio__title">Portfolio</h2>
     <ul class="portfolio__list">
-        <li class="portfolio__item" *ngFor="let kitchen of kitchens">
-            <div class="portfolio__item--img" (dblclick)="goToProject(kitchen.reference)">
+        <li class="portfolio__item" *ngFor="let kitchen of kitchens;let i = index">
+            <div class="portfolio__item--img" (dblclick)="goToProject(i)">
                 <img src={{kitchen.photo}} alt="Cocina 1">
             </div>
             <div class="portfolio__item--content">
